examples/testing/negative_costs-lower_bounds/nested_loop_with_minimum_neg_extra.ces
% ENTRIES
%
entry(nested_loop(MI,MK):[]).

eq(nested_loop(MI,MK),0,[while_0(0,0,MI,MK)],[MK>=0,MI>=0]).

eq(while_0(K,I,MI,MK),0,[],[I=MI,K=MK]).
eq(while_0(K,I,MI,MK),1,[while_1(K,MK,Kout),while_0(Kout,I+1,MI,MK)],[I=<MI]).
eq(while_0(K,I,MI,MK),1,[while_0(K-1,I+1,MI,MK)],[I=<MI]).

eq(while_1(K,NMax,Kout),0,[],[K=Kout]).
eq(while_1(K,NMax,Kout),2,[while_1(K+1,NMax,Kout)],[K+1=<NMax]).

